--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
         .container {
             border: 2px solid #333;
             width: 400px;
-            height: 500px;
+            height: 600px;
             position: relative;
             border-radius: 10px;
             overflow: hidden;
@@ -109,12 +109,12 @@
 
             </div>
             <div id="delivermessage"></div>
-
+            <div class="input" >
+                <input type="text" id="messagebox" placeholder="Type your message">
+                <button id="sendbutton">Send</button>
+            </div>
         </div>
-        <div class="input">
-            <input type="text" id="messagebox" placeholder="Type your message">
-            <button id="sendbutton">Send</button>
-        </div>
+        
     
 
     <script>
@@ -159,7 +159,7 @@
 
         function scrollToBottom() {
 
-            area.scrollTop = area.scrollHeight;
+            area.scrollTop = area.scrollHeight - area.clientHeight;
         }
 
 
